# OpencvToRpiCam

./: CMakeLists.txt  dream.c  dream.h  main.c  project.config
